--- a/app/src/main/res/layout/fragment_contact_details.xml
+++ b/app/src/main/res/layout/fragment_contact_details.xml
@@ -1,14 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
 
-
-    <data>
-
-        <variable
-            name="contactModel"
-            type="com.example.robertandroidcourse2021.ContactModel" />
-    </data>
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/layout"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
     <ScrollView
         android:layout_width="match_parent"
@@ -40,59 +37,52 @@
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:id="@+id/dog_image"
-                    imageResource="@{contactModel.imageResId}"
-
+                    android:id="@+id/contactImageDetail"
                     android:layout_width="120dp"
                     android:layout_height="180dp"
                     android:layout_margin="14sp"
                     android:adjustViewBounds="true"
                     android:contentDescription="@null"
-                    tools:src="@tools:sample/avatars" />
+                    android:scaleType="centerInside"
+                    />
 
                 <TextView
-                    android:id="@+id/name"
+                    android:id="@+id/nameDetail"
                     style="@style/TextAppearance.AppCompat.Title"
                     android:layout_width="193dp"
-
                     android:layout_height="match_parent"
                     android:layout_margin="14sp"
                     android:padding="16sp"
                     android:paddingStart="16sp"
-
-                    android:text="@{contactModel.name}" />
+ />
             </LinearLayout>
 
             <TextView
-                android:id="@+id/textView2"
+                android:id="@+id/contactNumberOne"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="14sp"
-                android:text="@{contactModel.numberOne}"
                 android:textSize="24sp" />
 
             <TextView
-                android:id="@+id/textView3"
+                android:id="@+id/contactNumberTwo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="14sp"
-                android:text="@{contactModel.numberTwo}"
                 android:textSize="24sp" />
 
             <TextView
-                android:id="@+id/textView4"
+                android:id="@+id/emailFirst"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="14sp"
-                android:text="@{contactModel.emailFirst}"
                 android:textSize="24sp" />
 
             <TextView
-                android:id="@+id/textView5"
+                android:id="@+id/emailSecond"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="14sp"
-                android:text="@{contactModel.emailSecond}"
                 android:textSize="24sp" />
 
             <TextView
@@ -107,4 +97,5 @@
         </LinearLayout>
 
     </ScrollView>
-</layout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
