--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,9 +3,6 @@
     android:id="@+id/root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/recycler_margin_horizontal"
-    android:paddingTop="@dimen/recycler_margin_vertical"
-    android:paddingRight="@dimen/recycler_margin_horizontal"
-    android:paddingBottom="@dimen/recycler_margin_vertical">
+   android:padding="4dp">
 
 </FrameLayout>
