--- a/app/src/main/res/layout/fragment_contact_details.xml
+++ b/app/src/main/res/layout/fragment_contact_details.xml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/layout"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+
+    <androidx.appcompat.widget.Toolbar
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/colorPrimary"
+        app:title="@string/contact_details_fragment"
+        tools:ignore="MissingConstraints">
+
+    </androidx.appcompat.widget.Toolbar>
 
     <ScrollView
         android:layout_width="match_parent"
@@ -18,18 +27,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-            <androidx.appcompat.widget.Toolbar
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@color/colorPrimary">
-                <TextView
 
-                    android:textSize="24sp"
-                    android:gravity="center"
-                    android:text="@string/contactdetailsfragment"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"/>
-            </androidx.appcompat.widget.Toolbar>
 
             <LinearLayout
                 android:layout_width="wrap_content"
@@ -43,8 +41,7 @@
                     android:layout_margin="14sp"
                     android:adjustViewBounds="true"
                     android:contentDescription="@null"
-                    android:scaleType="centerInside"
-                    />
+                    android:scaleType="centerInside" />
 
                 <TextView
                     android:id="@+id/nameDetail"
@@ -53,8 +50,7 @@
                     android:layout_height="match_parent"
                     android:layout_margin="14sp"
                     android:padding="16sp"
-                    android:paddingStart="16sp"
- />
+                    android:paddingStart="16sp" />
             </LinearLayout>
 
             <TextView
@@ -86,16 +82,14 @@
                 android:textSize="24sp" />
 
             <TextView
-
                 android:id="@+id/description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="14sp"
-                android:text="@{contactModel.description}"
                 android:textSize="24sp" />
 
         </LinearLayout>
 
     </ScrollView>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</LinearLayout>
