--- a/app/src/main/res/layout/fragment_contact_details.xml
+++ b/app/src/main/res/layout/fragment_contact_details.xml
@@ -68,6 +68,13 @@
                 android:textSize="24sp" />
 
             <TextView
+                android:id="@+id/birthday"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="14sp"
+                android:textSize="24sp" />
+
+            <TextView
                 android:id="@+id/emailFirst"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -87,6 +94,13 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="14sp"
                 android:textSize="24sp" />
+
+            <Button
+                android:id="@+id/btn_ntf"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="Включить напоминания"/>
 
         </LinearLayout>
 
