--- a/app/src/main/res/layout/contact_inn.xml
+++ b/app/src/main/res/layout/contact_inn.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,28 +10,27 @@
         android:id="@+id/contact_image"
         android:layout_width="90dp"
         android:layout_height="90dp"
+        android:layout_alignParentLeft="true"
         android:adjustViewBounds="true"
         android:contentDescription="@null"
-        android:scaleType="centerInside"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:scaleType="centerInside" />
 
     <TextView
         android:id="@+id/name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:fontFamily="sans-serif-medium"
-        app:layout_constraintStart_toEndOf="@+id/contact_image"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/contact_image"
+        android:layout_toRightOf="@id/contact_image"
+        android:fontFamily="sans-serif-medium" />
 
     <TextView
         android:id="@+id/contactNumber"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="48dp"
-        android:textSize="18sp"
+        android:layout_below="@+id/name"
+        android:layout_toEndOf="@+id/contact_image"
         app:layout_constraintStart_toEndOf="@+id/contact_image"
         app:layout_constraintTop_toBottomOf="@+id/name" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
